2020 Goals finished.  need to fix spacing between 2020 goals and section above

--- a/main.css
+++ b/main.css
@@ -38,7 +38,6 @@
 }
 
 
-
 .section-left {
   display: inline-block;
   width: 45%;
@@ -126,6 +125,16 @@ p {
   font-family: Open-Sans, sans-serif;
 }
 
+.pextrasmall {
+  color: rgb(30, 37, 74);
+  font-size: 1.25vw;
+  text-align: justify;
+  font-family: Open-Sans-Regular, sans-serif;
+  line-height: 1.5vw;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
 h {
   color: rgb(30, 37, 74);
   font-size: 4vw;
@@ -145,4 +154,8 @@ h2 {
   font-size: 2vw;
   text-align: center;
   font-family: Open-Sans, sans-serif;
+}
+
+p a {
+  color: rgb(101, 110, 162);
 }
