--- a/sponsor.css
+++ b/sponsor.css
@@ -98,7 +98,6 @@
 
 }
 
-
 .donate:hover {
   background-color: rgb(30, 37, 74);
   color: white;
@@ -106,18 +105,6 @@
   transition-duration: 0.4s;
   text-decoration: none;
 }
-
-.email {
-  color: gray;
-  font-size: 2vw;
-  text-align: justify;
-  font-family: Open-Sans-Regular, sans-serif;
-}
-
-p a {
-  color: rgb(101, 110, 162);
-}
-
 
 .section-left-sponsor {
   display: inline-block;
@@ -140,7 +127,6 @@ p a {
   font-family: Open-Sans, sans-serif;
 }
 
-
 .row-sponsor {
   position: relative;
   height: auto;
@@ -150,4 +136,38 @@ p a {
   display: flex;
   flex-wrap: nowrap;
   justify-content: center;
+}
+
+
+.section-goals {
+  margin-top: 0vh;
+  width: 100%;
+  height: auto;
+  display: flex;
+  background-color: none;
+  line-height: 3vw;
+  color: white;
+  font-size: 1.5vw;
+  text-align: center;
+  font-family: Open-Sans, sans-serif;;
+
+}
+
+
+.goal {
+  display: inline-block;
+  width: 100%;
+  height: inherit;
+  background-color: white;
+  color: rgb(30, 37, 74);
+  text-align: center;
+  font-family: Open-Sans, sans-serif;
+  font-size: 1.5vw;
+
+
+}
+
+.goal img {
+  width: auto;
+  height: 150px;
 }
